fixing overflow scroll on the body when sidemenu is opened

--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ section.second .section-heading {
     justify-content: center;
     background: var(--black);
     transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    min-height: 100vh;
   }
   ul.mobile.expand {
     user-select: initial;
